wording ++ & fix title cropped

--- a/src/components/projects/card/style.scss
+++ b/src/components/projects/card/style.scss
@@ -62,7 +62,6 @@
         .card {
             border-radius: 5px;
             background-repeat: no-repeat;
-            //background-position: left;
             background-size: cover;
             height:100%;
             width: 100%;
@@ -89,8 +88,7 @@
                 position: absolute;
                 top: 10px;
                 font-size: 2em;
-                height: 25%;
-                overflow: hidden;
+                margin-top: 5px;
             }
             .text {
                 width:100%;
